--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
 <meta chartset="utf-8"/>
-<meta description="Proyecto de diseño web"/>
+<meta name="description" content="Proyecto de diseño web"/>
 <title>
 Puls2014: Comunidad de personas atractivas y sexy
 </title>
+<link rel="stylesheet"  href="normalize.css">
 </head>
 <body>
 <header>
