--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <title>
 Puls2014: Comunidad de personas atractivas y sexy
 </title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet"  href="normalize.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -14,7 +17,7 @@ Puls2014: Comunidad de personas atractivas y sexy
 <img src="Logo.gif"/>
 </figure>
 <h1>Puls2014: Comunidad de personas atractivas y sexy</h1>
-<figure> 
+<figure id="avatar"> 
 <img src="Avatar.jpg">
 </figure>
 </header>
@@ -25,27 +28,106 @@ Puls2014: Comunidad de personas atractivas y sexy
 	<li><a href="#">Javascript</a></li>
 	<li><a href="#">CSS3</a></li>
 	<li><a href="#">Django</a></li>
-	<li id="publicar nav"><a href="#">Publicar</a></li>
+	<li id="publicar_nav"><a href="#" class="icon-pen">Publicar</a></li>
 </ul>                 
 </nav>
-<section id="#contenido">
-<article class=".item"><figure id="imagen_item"><img src="imagen.jpg">
+<section id="contenido">
+<!1er post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Titulo del articulo</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
-<span class="fecha_item">hace<strong>5</strong>min</span>
-
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
 </div>
 <div class="votacion">
-	<a href="#" class="up"></a>
-	720
-	<a href="#" class="down"></a>
-	<a href="#" class="comentarios_item">69</a>
-    <a href="#" class="guardar_item"></a>
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item ">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
 </div>
 </article>
-</section>
+<!2do post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
+</figure>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
+<div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
+<div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
+</div>
+<div class="votacion">
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
+</div>
+</article>
+<!3er post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
+</figure>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
+<div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
+<div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
+</div>
+<div class="votacion">
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
+</div>
+</article>
+<!4to post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
+</figure>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
+<div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
+<div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
+</div>
+<div class="votacion">
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item ">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
+</div>
+</article>
+<!5to post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
+</figure>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
+<div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
+<div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
+</div>
+<div class="votacion">
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item ">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
+</div>
+</article>
+<!6to post>
+<article class="item"><figure id="imagen_item"><img src="imagen.jpg">
+</figure>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
+que Usted debe saber</a></h2>
+<div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
+<div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
+<span class="fecha_item">hace<strong> 5 </strong>min</span>
+</div>
+<div class="votacion">
+	<a href="#" class="up icon-arrow-up"></a> 400
+	<a href="#" class="down icon-arrow-down"></a>
+	<a href="#" class="comentarios_item ">69</a>
+    <a href="#" class="guardar_item icon-star"></a>
+</div>
+</article>
 <footer>
 <p>
 <strong>Powered by Holligans1985©</strong>
