--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta chartset="utf-8"/>
 <meta name="description" content="Proyecto de diseño web"/>
+<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
 <title>
 Puls2014: Comunidad de personas atractivas y sexy
 </title>
@@ -31,12 +32,18 @@ Puls2014: Comunidad de personas atractivas y sexy
 	<li id="publicar_nav"><a href="#" class="icon-pen">Publicar</a></li>
 </ul>                 
 </nav>
+<aside>
+<video width="320" height="240" autoplay>
+	<source src="lecturas.mp4" type="video/mp4">
+	<source src="lecturas.ogg" type="video/ogg">
+	Your browser does not support the video tag.
+</video>
+</aside>
 <section id="contenido">
 <!1er post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -51,8 +58,7 @@ que Usted debe saber</a></h2>
 <!2do post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -67,8 +73,7 @@ que Usted debe saber</a></h2>
 <!3er post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -83,8 +88,7 @@ que Usted debe saber</a></h2>
 <!4to post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -99,8 +103,7 @@ que Usted debe saber</a></h2>
 <!5to post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -109,14 +112,13 @@ que Usted debe saber</a></h2>
 	<a href="#" class="up icon-arrow-up"></a> 400
 	<a href="#" class="down icon-arrow-down"></a>
 	<a href="#" class="comentarios_item ">69</a>
-    <a href="#" class="guardar_item icon-star"></a>
+    <a href="#" class="guardar_item icon-star"></a> 
 </div>
 </article>
 <!6to post>
 <article class="item"><figure id="imagen_item"><img src="imagen.jpg">
 </figure>
-<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms)
-que Usted debe saber</a></h2>
+<h2 class="titulo_item"><a href="#">Expresiones Idiomáticas (Idioms) que Usted debe saber</a></h2>
 <div class="autor_item">por<a href="#"> Alexander Vazquez</a></div> 
 <div class="datos_item"><a href="#" class="tag_item">Holligans1985</a>
 <span class="fecha_item">hace<strong> 5 </strong>min</span>
@@ -128,6 +130,7 @@ que Usted debe saber</a></h2>
     <a href="#" class="guardar_item icon-star"></a>
 </div>
 </article>
+</section>
 <footer>
 <p>
 <strong>Powered by Holligans1985©</strong>
